TZUP-385: Configured files for openlmis-buq service (#1)
* TZUP-385: Configured files for openlmis-buq service

* TZUP-385: Changed csv file with demo data
