# src/main/java/org/openlmis/buq/web/VersionController.java
@@ -1,0 +1,43 @@
+/*
+ * This program is part of the OpenLMIS logistics management information system platform software.
+ * Copyright © 2017 VillageReach
+ *
+ * This program is free software: you can redistribute it and/or modify it under the terms
+ * of the GNU Affero General Public License as published by the Free Software Foundation, either
+ * version 3 of the License, or (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
+ * without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
+ * See the GNU Affero General Public License for more details. You should have received a copy of
+ * the GNU Affero General Public License along with this program. If not, see
+ * http://www.gnu.org/licenses.  For additional information contact info@OpenLMIS.org.
+ */
+
+package org.openlmis.buq.web;
+
+import org.openlmis.util.Version;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
+
+/**
+ * Controller used for displaying service's version information.
+ */
+@RestController
+public class VersionController {
+
+  private static final Logger LOGGER = LoggerFactory.getLogger(VersionController.class);
+
+  /**
+   * Displays version information.
+   *
+   * @return {Version} Returns version read from file.
+   */
+  @RequestMapping("/buq")
+  public Version display() {
+    LOGGER.debug("Returning version");
+    return new Version();
+  }
+
+}
